--- a/resource/dashboard/config/eks-admin-cluster-role-binding.yaml
+++ b/resource/dashboard/config/eks-admin-cluster-role-binding.yaml
@@ -1,19 +1,12 @@
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: tiller
-  namespace: kube-system
----
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: tiller
+  name: eks-admin
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
-  - kind: ServiceAccount
-    name: tiller
-    namespace: kube-system
+- kind: ServiceAccount
+  name: eks-admin
+  namespace: kube-system
